--- a/src/app/form/form.component.css
+++ b/src/app/form/form.component.css
@@ -1,7 +1,7 @@
 .text{
     text-align: center;
-    max-width: 730px;
-    margin: 30px auto 60px auto;
+    max-width: 720px;
+    margin: 15px auto 35px auto;
 }
 .text h1{
     font-size: 2.5rem;
@@ -11,9 +11,10 @@
 }
 
 .text p {
-    font-size: 0.75rem;
+    font-size: 0.72rem;
     margin: 0;
-    line-height: 1.5;
+    font-weight: 500;
+    line-height: 1.9;
 }
 
 form {
@@ -25,7 +26,8 @@ form input{
     width: 100%;
     margin-bottom: 20px; 
     font-size: 1.125rem;
-    padding: 15px;
+    font-weight: 600;
+    padding: 10px;
     border: 1px solid #1197c3;
 }
 form button{
@@ -35,4 +37,20 @@ form button{
     background-color: #1197c3;
     border: 0;
     color: #000000;
+}
+@media only screen and (max-width: 700px) {
+    .text h1{
+        font-size: 2rem;
+        margin-top: 0;
+        margin-bottom: 25px;
+        font-weight: 900;
+    }
+    form input {
+        width: 95%;
+    }
+}
+@media only screen and (max-width: 900px) {
+    .container{
+        padding-bottom: 30px;
+    }
 }
