--- a/src/app/imgslider/imgslider.component.css
+++ b/src/app/imgslider/imgslider.component.css
@@ -1,21 +1,33 @@
-
-.img-con {
-    padding: 0 15px;
-}
-.img-con .img {
-    width: 350px;
-    height: 300px;
-    background-size: cover;
+.gallery-container{
+    max-width: 1140px;
+    margin: 10px auto 0 auto;
 }
 .arrow{
     height: 30px;
-    margin: 0 45px;
-
+    float: left;
+    margin-left: 65px;
+    cursor: pointer;
 }
-.gallery{
-    max-width: 1100px;
-    margin: 0 auto;
+.gallery-control {
+    transition: transform 0.5s cubic-bezier(0.23, 1, 0.32, 1);
+}
+.gallery-inner{
+    overflow: hidden;
 }
 .arrow-right{
-    transform: rotate(180deg);
+    float: right;
+    margin-right: 65px;
+}
+.gallery-nav{
+    position: absolute;
+    width: 1140px;
+    top: 130px;
+}
+@media only screen and (max-width: 1140px) {
+    .gallery-nav{
+        width: 100%;
+    }
+    .gallery-container{
+        padding: 0;
+    }
 }
