--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
-@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:600,800');
+
 body{
     font-family: 'Open Sans', sans-serif;
+    margin: 0;
 }
 .container{
-    max-width: 1100px;
+    max-width: 1110px;
     margin: 0 auto;
+}
+@media only screen and (max-width: 1140px) {
+    .container{
+        padding: 0 15px;
+    }
 }
