--- a/src/app/form/form.component.css
+++ b/src/app/form/form.component.css
@@ -38,6 +38,14 @@ form button{
     border: 0;
     color: #000000;
 }
+.none {
+    display: none;
+}
+.block {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
 @media only screen and (max-width: 700px) {
     .text h1{
         font-size: 2rem;
